Debug IPython code

--- a/slides.qmd
+++ b/slides.qmd
@@ -62,24 +62,18 @@ jupyter: python3
 
 ---
 
-# Intro {.smaller}
+# Intro
 
 In this talk we're gonna show how to use Python to:
-
-::: {.columns}
-::: {.column}
-
 
   - Connect to a database and execute the queries
   - Convert natural language questions into SQL
   - Create a workflow
   - Fix common errors
   - Lessons learned
-:::
-::: {.column}
+  
 TODO: Put some drawing & rephrase
-:::
-:::
+
 ---
 
 # Connect to a database and execute the queries
@@ -172,3 +166,485 @@ display(sqlite_df.head(2))
 ```
 
 :::
+
+---
+
+### Downloading BIRD databases
+
+<!-- - We will be using [`uvx`](https://docs.astral.sh/uv/concepts/tools/#tool-versions)[^uvx] with the `gdown` package as follows: -->
+
+```shell
+uvx gdown https://drive.google.com/file/d/13VLWIwpw5E3d5DUkMvzw7hvHE67a4XkG/
+```
+![](./img/download_minidev.png)
+<!-- Or just download from the [ {{< bi google >}} {{< bi hdd >}} link](https://drive.google.com/file/d/13VLWIwpw5E3d5DUkMvzw7hvHE67a4XkG/view?usp=sharing)  -->
+
+Extracting the archive (3.3GiB)
+
+```shell
+unzip minidev_703.zip
+```
+<!-- [^uvx]: It comes as part of `uv`, it's a shorthand for `uv tool run` -->
+
+::: footer
+:::
+---
+
+### Picking the example database `california_schools`
+
+In `minidev/MINIDEV/dev_databases/california_schools/` we find the {{< bi database >}} {{< bi file >}}
+
+![](./img/california_school.png)
+
+
+---
+
+### Creating the `Engine`
+
+```{python}
+#| echo: true
+#| code-overflow: wrap
+
+from sqlalchemy import create_engine
+path = './minidev/MINIDEV/dev_databases/california_schools/california_schools.sqlite'
+engine = create_engine(f'sqlite:///{path}')
+engine
+```
+
+---
+
+### Grabbing a simple question and its  {{< bi database >}} 
+
+```{python}
+#| echo: true
+california_schools_df = sqlite_df[sqlite_df.db_id == 'california_schools']
+simple_queries_df = california_schools_df[sqlite_df.difficulty == 'simple']
+simple_queries_df.head(2).set_index("db_id")
+```
+
+---
+
+```{python}
+#| echo: true
+import pandas as pd
+pd.set_option('display.max_colwidth', 0)
+
+question_sql_df = simple_queries_df[["question","SQL"]].reset_index()
+# question_sql_df[0:1].T
+```
+
+::: {.fragment .fade-left}
+
+```{python}
+#| echo: true
+
+question = question_sql_df.loc[0, "question"]
+query = question_sql_df.loc[0, "SQL"]
+print(f"{question!r}")
+print(f"{query!r}")
+```
+
+:::
+
+---
+
+### Execute the queries {.smaller}
+
+```{python}
+#| echo: true
+
+from sqlalchemy import text
+with engine.connect() as conn:
+    result = conn.execute(text(query))
+    res_df = pd.DataFrame(result.fetchall()) # 🐼 ✨
+    print(
+        f"[bold]Question:[/bold] {question}, ",
+        f"[bold]SQL:[/bold] {query}", 
+        "[bold]Result[/bold]", sep="\n"
+    )
+    display(res_df)
+```
+
+---
+
+### Database schema with 🦜 ⛓️
+
+LangChain (🦜 ⛓️) community 🐍 📦 provides a simple class that can retrieve some schema information [^qa_lc]
+
+```{python}
+#| echo: true
+!uv pip install langchain-community
+```
+
+```{python}
+#| echo: true
+
+from langchain_community.utilities import SQLDatabase
+db = SQLDatabase(engine=engine)
+
+display(db.get_usable_table_names())
+```
+
+::: {.fragment .slide-left}
+As we can see, the table names may not be immediately understandable 🤔
+:::
+[^qa_lc]: [SQL Question Answering](https://python.langchain.com/docs/tutorials/sql_qa/#system-prompt){target="_blank"}
+
+::: notes
+
+:::
+
+---
+
+# Convert natural language questions into SQL {.smaller}
+
+:::: {.columns}
+::: {.column}
+::: {.fragment .fade-left}
+LLMs are quite capable of writing functional SQL queries, from the `code` or `coder`
+ones, to specific ones for SQL generation.
+:::
+
+
+:::
+
+::: {.column}
+
+::: {.fragment .fade-left}
+For example, some IBM trained models include:
+
+- granite-20b-code-instruct
+- granite-34b-code-instruct
+- granite-20b-code-base-schema-linking
+- granite-20b-code-base-sql-gen
+
+[More info on these models {{< bi box-arrow-up-right >}}](https://dataplatform.cloud.ibm.com/docs/content/wsj/analyze-data/fm-models-ibm.html?context=wx&locale=en&audience=wdp#granite-code-instruct-models)
+:::
+
+:::
+
+::::
+
+::: notes
+For those of us who have been writing code for some time and 
+fell in love with ORMs when they were the *hot* new thing, LLMs
+can take us to the next level!
+:::
+
+
+## Prompts for SQL generation {transition="convex"}
+
+
+::: {.fragment .fade-in-then-semi-out}
+LLMs don't know the  🏗️ structure of our database, and may hallucinate 
+about it, or create some flat out invalid SQL.
+:::
+
+::: {.fragment .fade-in-then-semi-out}
+We have to  provide __extra__ information about the structure in the instructions.
+
+For this we will use a **prompt** string with some palace-holders {{< bi braces >}}.
+:::
+
+::: {.fragment .fade-in-then-semi-out}
+Some research papers from our team from our team:
+
+[{{< bi filetype-pdf >}} Weakly Supervised Detection of Hallucinations in LLMs](https://arxiv.org/pdf/2312.02798)
+:::
+
+::: {.fragment .fade-in-then-semi-out}
+[{{< bi filetype-pdf >}} Localizing Persona Representations In LLMs](https://arxiv.org/pdf/2505.24539)
+:::
+
+::: notes
+In Flowpilot we created a framework inspired on LangGraph for this.
+:::
+
+---
+
+### Prompts {.smaller}
+
+```{python}
+#| echo: true
+#| code-line-numbers: 1-7|8-14|15-18
+
+system_message = """
+Given an input question, create a syntactically correct {dialect} query to
+run to help find the answer. Unless the user specifies in his question a
+specific number of examples they wish to obtain, always limit your query to
+at most {top_k} results. You can order the results by a relevant column to
+return the most interesting examples in the database.
+
+Never query for all the columns from a specific table, only ask for a the
+few relevant columns given the question.
+
+Pay attention to use only the column names that you can see in the schema
+description. Be careful to not query for columns that do not exist. Also,
+pay attention to which column is in which table.
+
+Only use the following tables:
+{table_info}
+"""
+```
+
+::: {.small_text}
+
+[source {{< bi box-arrow-up-right >}}](https://python.langchain.com/docs/tutorials/sql_qa/#convert-question-to-sql-query)
+
+:::
+
+--- 
+
+## Creating a prompt {.smaller}
+
+Now we construct a list of messages. These are `dicts` which have a key
+`user` or `system`, and a `content`.
+
+```{python}
+#| echo: true
+#| output-location: slide
+def generate_messages(question, dialect="SQL", top_k=5, table_info=""):
+    # Create a ChatPromptTemplate
+    messages = [
+      {"role": "system", 
+      "content": system_message.format(
+        dialect=dialect, 
+        top_k=top_k, 
+        table_info=table_info
+       )},
+      {
+        "role": "user", 
+        "content": question
+      }
+    ]
+    
+    return messages
+
+messages = generate_messages(question=question, dialect=db.dialect, top_k=10, table_info=db.get_table_info())
+messages
+```
+
+```{python}
+#| echo: false
+import json
+with open("messages.json", "w") as fp:
+    json.dump(messages, fp)
+```
+
+---
+
+### Calling the LLM with the prompt {.smaller}
+
+::: {style="font-size: 90%;"}
+::: {.fragment .fade-in-then-semi-out}
+
+Instead of a provider specific client, we will use *litellm*.
+
+```{python}
+#| echo: true
+!uv add litellm --quiet
+```
+
+There are some `extras` [^extras]
+
+:::
+
+[^extras]: 
+  
+  `caching` , `extra-proxy` , `mlflow` , `proxy` , `semantic-router`, `utils`
+
+:::: {.columns}
+::: {.fragment .fade-in}
+::: {.column width="70%"}
+
+<!-- Enable disk cachesq -->
+
+```{python}
+#| echo: false
+# Speed up execution
+import litellm 
+from litellm.caching.caching import Cache
+litellm.cache = Cache(type="disk")
+```
+
+```{python}
+import litellm
+try:
+    response = litellm.completion(
+    model="ollama/granite-code:20b",
+    messages=messages,
+    )
+except Exception as e:
+    print("error", e)
+else:
+    print(response) # or response
+```
+
+:::
+
+
+
+
+::: {.column width="5%" }
+:::
+
+::: {.column width="25%" }
+[{{< bi info-circle >}} `model` list](https://docs.litellm.ai/docs/providers)
+
+:::
+:::
+:::
+
+:::
+
+
+::: notes
+
+There are some reasonably good LLMs under the coder and instruct in Hugging Face.
+Some of these can be run locally with some inference server like `Ollama`, 
+`llama.cpp` or `LMStudio`, and also use pubic 
+ones.
+:::
+---
+
+### litellm response object
+
+::: {.fragment .fade-in-then-semi-out}
+```python
+ModelResponse(
+  id='chatcmpl-c34aae0e-a299-42a0-922e-aabd96e3a91e', 
+  created=1758269174, 
+  model='ollama/granite-code:20b', 
+  object='chat.completion', 
+  system_fingerprint=None, 
+  choices=[Choices(
+    finish_reason='stop', 
+    index=0, 
+    message=Message(
+      content='### Bot:\nHey there! How can I assist you today?\n\n', 
+      role='assistant', 
+      tool_calls=None, 
+      function_call=None, 
+      provider_specific_fields=None
+      )
+    )], 
+    usage=Usage(
+      completion_tokens=17, 
+      prompt_tokens=20, 
+      total_tokens=37, 
+      completion_tokens_details=None, 
+      prompt_tokens_details=None
+      )
+    )
+```
+:::
+
+
+
+
+---
+
+### Getting some completions (cont.) {.center}
+```python
+#| echo: true
+#| output: true
+#| 
+from litellm import completion
+
+messages = [
+  {"role": "user", 
+  "content": "Create a small customer table in SQL"}]
+response = completion(
+  model="ollama/hf.co/unsloth/DeepSeek-R1-Distill-Llama-8B-GGUF:F16", 
+  messages=messages, stream=False
+)
+print(response['choices'][0]['message']['content'])
+```
+
+
+---
+# Create a workflow
+
+---
+
+# Chaining generation and execution
+
+::: {.fragment .fade-in-then-semi-out}
+When our code starts to become larger than a script can handle 🏋🏾‍♀️, `LangGraph` is a great
+tool to provide some reusable organization. We can add it with `uv add langgraph`.
+:::
+
+::: {.fragment .fade-in-then-semi-out}
+This will help us to separate some concerns like  📐 *validation* , 🏃🏽 *execution* and later,  ☢️ *enrichment*.
+:::
+
+::: {.fragment .fade-in-then-semi-out .center}
+Let's see how we can create something like this:
+```{mermaid}
+%%| fig-align: center
+flowchart LR
+    S[Start]
+    CallLLM[Call litellm's completion]
+    S -->|State: Dict| CallLLM
+    CallLLM --> End
+    
+```
+:::
+
+---
+
+## State
+
+LangGraph uses state that is propagated through nodes.
+
+This state can be defined with a TypedDict or a Pydantic BaseModel.
+
+```{python}
+#| echo: true
+from pydantic import BaseModel, Field
+from typing import Optional
+
+class State(BaseModel):
+    question: str = ""
+    schema: str = ""
+    sql: Optional[str] = Field(default=None, description="")
+```
+
+---
+
+# Fix common errors
+## Adding a node for safety
+
+::: notes
+Usually done through LLMs in agentic workflows, we are going to take a
+more deterministic approach.
+:::
+
+## Let's go for Bobby tables {.center}
+
+![](./img/memes/exploits_of_a_mom.png)
+
+::: footer
+[`xkcd 327`](https://www.explainxkcd.com/wiki/index.php/327:_Exploits_of_a_Mom)
+::: 
+
+---
+
+# Adding more information in the prompt
+
+## Acronyms
+
+
+
+---
+# Lessons learned
+
+---
+
+## Reducing the schema for simpler queries
+
+
+## Metadata about the columns
+
+## Dynamic context
+-
